# lunch-menu

./: App.py  Main_Page.py  README.md  endpoints.json  env.dummy  pyproject.toml
.streamlit/: secrets.toml
note/: CRUD.ipynb  Untitled.ipynb  endpoints.ipynb  kwargs.ipynb  melt.ipynb  menu.ipynb  pandasql.ipynb
pages/: 1_Input.py  2_chart.py  3_bulk_insert.py  4_popular_menu.py  5_Noodle_insert.py  6_Noodle_analysis.py  7_age_calculators.py  8_Sync.py  9_old.py  main_page.py
src/lunch_menu/: constants.py  db.py
